Hanlde Backend APIs with Active functionalitu

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,8 @@
 SALT_SECRET_KEY = auth
 JWT_SECRET_KEY = auth
+
+REDIS_HOST = redis-17401.crce182.ap-south-1-1.ec2.redns.redis-cloud.com
+REDIS_PORT = 17401
+REDIS_PASSWORD = cnEPtGW6S1yuSk8jOpAa8ZEdPV63hqCB
+
+# redis-cli -u redis://default:cnEPtGW6S1yuSk8jOpAa8ZEdPV63hqCB@redis-17401.crce182.ap-south-1-1.ec2.redns.redis-cloud.com:
